# tablet-svg

./: .bumpversion.cfg  LICENSE  README.md  pyproject.toml  qt-to-svg-migration.md
src/tabletsvg/: __init__.py  __main__.py  element.py  geometry_types.py  layer.py  log.conf  presentation.py  resource_library.py  styledb.py  tablet.py
src/tabletsvg/demo/: demo2_stickers.py  demo4_lines.py  demo5_symbols.py  demo5sm_symbols.py
src/tabletsvg/graphics/: crayon_box.py  diagnostic_marker.py  image.py  line_segment.py  polygon_se.py  rectangle_se.py  symbol.py  text_element.py
tests/: test_cd_text.py  test_images.py  test_rectangles.py  test_starrcd_symbols.py  test_state_symbols.py  test_xuml_stickers.py
