[build-system]
requires      = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mi-tabletsvg"
version = "0.1.0"
description = "Tablet simple 2D drawing interface that renders to SVG"
readme = "README.md"
authors = [{ name = "Leon Starr", email = "leon_starr@modelint.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["2D", "draw", "graphics", "canvas", "svg", "mbse", "xuml", "xtuml", "sysml"]
dependencies = ['mi-configurator', 'PyYAML']
requires-python = ">=3.12"

[project.optional-dependencies]
build = ["build", "twine"]
dev = ["bump2version", "pytest"]

[project.urls]
repository    = "https://github.com/modelint/tablet-svg"

[tool.setuptools.packages.find]
where = ["src"]
